# ldproxy

./: LICENSE  README.md  pyproject.toml
ldproxy/: geno_io.py  io.py  ldproxy.py  transform.py
tests/: test_projection.py
tests/data/: test_input.bed  test_input.bim  test_input.pgen  test_input.psam  test_input.pvar  test_input.vcf.gz.tbi
